--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
       </div>
     </main>
 
-    <script src="js/app.js"></script>
+    <script src="js/app.js" type="module"></script>
   </body>
 </html>
