--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Buscador de Letras - JSModerno</title>
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://necolas.github.io/normalize.css/8.0.0/normalize.css"
-    />
+    /> -->
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900"
       rel="stylesheet"
