--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Buscador de Letras - JSModerno</title>
-    <!-- <link
-      rel="stylesheet"
-      href="https://necolas.github.io/normalize.css/8.0.0/normalize.css"
-    /> -->
+    <title>Buscador de Letras</title>
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900"
       rel="stylesheet"
